--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="An interactive getting started guide for Brackets.">
-    <title>Project 1</title>
+    <title>Artist-SHINICH-INABA</title>
     
    
     <!-- import the webpage's stylesheet -->
