--- a/Project 1 mobile:tablet design/gallery-08.html
+++ b/Project 1 mobile:tablet design/gallery-08.html
@@ -6,6 +6,9 @@
     <meta name="description" content="An interactive getting started guide for Brackets.">
     <meta name='viewport'
       content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+     <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Mukta:300&display=swap" rel="stylesheet">
     <title>Gallery</title>
 
 
@@ -23,7 +26,6 @@
     <div class="topnav">
 
 
-        <!--             Navigation bar -->
 
 
         <!-- 'hidden' menu-->
@@ -37,7 +39,7 @@
 
         <!-- 'hidden' menu trigger-->
         <a class="icon" onclick="showMenu()">
-            <img src="https://cdn.glitch.com/36a0c12c-e227-4265-af26-734c4c458206%2Fmenu-24px.svg">
+            <img src="https://cdn.glitch.com/36a0c12c-e227-4265-af26-734c4c458206%2Fmenu-24px.svg" width="65%">
         </a>
     </div>
 
@@ -72,7 +74,7 @@
         
         <div class="blocks1 blocks1-info1">
             <h2>QUAIL SAKE CUP</h2>
-            <h3>2019.12.05</h3>
+            <h3>2016.11.07</h3>
             <h5>Shinich Inaba </h5>
         </div>
         
