--- a/Project 1 mobile:tablet design/gallery.html
+++ b/Project 1 mobile:tablet design/gallery.html
@@ -6,6 +6,9 @@
     <meta name="description" content="An interactive getting started guide for Brackets.">
     <meta name='viewport'
       content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/>
+    <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Mukta:300&display=swap" rel="stylesheet">
     <title>Gallery</title>
 
 
@@ -60,7 +63,7 @@
         </div>
 
         <div class="blocks1 blocks1-date1">
-            <h3>2019.12.10</h3>
+            <h3>2019.10.10</h3>
         </div>
 
 
@@ -71,7 +74,7 @@
         </div>
 
         <div class="blocks1 blocks1-date2">
-            <h3>2019.12.10</h3>
+            <h3>2019.08.11</h3>
         </div>
 
         <div class="blocks1 blocks1-img3">
@@ -79,7 +82,7 @@
         </div>
 
         <div class="blocks1 blocks1-date3">
-            <h3>2019.12.10</h3>
+            <h3>2019.02.13</h3>
         </div>
 
         <div class="blocks1 blocks1-img4">
@@ -89,7 +92,7 @@
 
 
         <div class="blocks1 blocks1-date4">
-              <h3>2019.12.10</h3>
+              <h3>2019.01.11</h3>
         </div>
 
         <div class="blocks1 blocks1-img5">
@@ -98,7 +101,7 @@
         </div>
 
         <div class="blocks1 blocks1-date5">
-            <h3>2019.12.10</h3>
+            <h3>2018.11.30</h3>
         </div>
 
         <div class="blocks1 blocks1-img6">
@@ -106,7 +109,7 @@
         </div>
 
         <div class="blocks1 blocks1-date6">
-            <h3>2019.12.10</h3>
+            <h3>2018.09.28</h3>
         </div>
 
         <div class="blocks1 blocks1-img7">
@@ -115,7 +118,7 @@
         </div>
 
         <div class="blocks1 blocks1-date7">
-            <h3>2019.12.10</h3>
+            <h3>2017.06.25</h3>
         </div>
 
         <div class="blocks1 blocks1-img8">
@@ -125,7 +128,7 @@
         </div>
 
         <div class="blocks1 blocks1-date8">
-            <h3>2019.12.10</h3>
+            <h3>2016.11.07</h3>
         </div>
 
         <div class="blocks1 blocks1-copyright">
